# pelops

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt  settings.py  setup.py  style.sh  tox.ini  wsgi.py
.github/workflows/: build.yaml  ci.yaml  test.yaml
app/: __init__.py
app/apis/: __init__.py  psp_token.py  spreedly_stubs.py  storage.py
app/fixtures/: payment.json  spreedly.py
docker_root/etc/cont-init.d/: 01-build-envfile  02-setup-logging
docker_root/etc/nginx/conf.d/: pelops.conf
docker_root/etc/services.d/uwsgi/: run
docker_root/etc/uwsgi/sites/: pelops.ini
docker_root/root/.ssh/: id_rsa
environment/: __init__.py
fixtures/: spreedly.py
pelops/: __init__.py  reporting.py  settings.py  version.py
pelops/apis/: __init__.py  psp_token.py  spreedly_stubs.py  storage.py
pelops/fixtures/: spreedly.py
