[tool.poetry]
name = "pelops"
version = "0.0.0" # This is handled by poetry-dynamic-versioning
description = "Mock API provider. Used for mocking external APIs in dev & staging."
authors = ["Bink <backend@bink.com>"]
readme = "README.md"
packages = [{include = "pelops"}]
repository = "https://github.com/binkhq/pelops"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/binkhq/_packaging/binkhq/pypi/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^21.2.0"
redis = "^5.0.1"
flask = "^3.0.2"
flask-restful = "^0.3.10"
flask-restx = "^1.3.0"
flask-httpauth = "^4.8.0"
pydantic-settings = "^2.2.0"
bink-logging-utils = { version="^1.4.0", source="azure" }

[tool.poetry.group.dev.dependencies]
xenon = "^0.9.1"
ruff = "^0.2.2"
mypy = "^1.8.0"
ipython = "^8.21.0"
refurb = "^1.28.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
vcs = "git"
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ['pelops/version.py']

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_redundant_casts = true

[tool.ruff]
line-length = 120
output-format = "full"
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",    # Pyflakes (F)
    "E",
    "W",    # pycodestyle (E, W)
    "C90",  # mccabe (C90)
    "I",    # isort (I)
    # pydocstyle (D)
    "UP",   # pyupgrade (UP)
    "N",    # pep8-naming (N)
    "YTT",  # flake8-2020 (YTT)
    # "ANN",  # flake8-annotations (ANN)
    # "S",    # flake8-bandit (S)
    "BLE",  # flake8-blind-except (BLE)
    # flake8-boolean-trap (FBT)
    "B",    # flake8-bugbear (B)
    "A",    # flake8-builtins (A)
    "C4",   # flake8-comprehensions (C4)
    "T10",  # flake8-debugger (T10)
    # flake8-errmsg (EM)
    "ICN",  # flake8-import-conventions (ICN)
    "T20",  # flake8-print (T20)
    # "PT",   # flake8-pytest-style (PT)
    "Q",    # flake8-quotes (Q)
    # flake8-return (RET)
    "SIM",  # flake8-simplify (SIM)
    "TID",  # flake8-tidy-imports (TID)
    "ARG",  # flake8-unused-arguments (ARG)
    "DTZ",  # flake8-datetimez (DTZ)
    "ERA",  # eradicate (ERA) until we can remove commented out code this has to stay deactivated
    # pandas-vet (PD)
    # pygrep-hooks (PGH)
    "PLC",
    "PLE",
    "PLR",
    "PLW",  # Pylint (PLC, PLE, PLR, PLW)
    "RUF",  # Ruff-specific rules (RUF)
]
ignore = [
    "BLE001",
    "PLR2004",
    "N818",
    "PLR0915", # Too many statements
]

[tool.refurb]
ignore = [
    "FURB184",  # some chaining suggestions don't make sense
]
